syntax = "proto3";

package service;
option go_package="./pb";

service Pay {
  rpc UpdatePayOrder (UpdatePayOrderReq) returns (UpdatePayOrderResp);
  rpc UpdatePayOrderRollBack (UpdatePayOrderReq) returns (UpdatePayOrderResp);
}

message UpdatePayOrderReq {
  enum PayTypeEnum {
      _  = 0;
      H5 = 1;
      Applet = 2;
      Multitude_Account = 3;
      Scan_Code = 4;
      Balance = 5;
  }
  PayTypeEnum PayType = 1;
}

message UpdatePayOrderResp {
  int32 Code = 1;
  string Msg = 2;
}

